--- a/5.html
+++ b/5.html
@@ -11,10 +11,10 @@
         var contagem = parseInt(prompt("Vamos contar! Digite até onde deseja contar: "))
         var i = 0
         document.write("Contagem: ")
-        while(i <= contagem) {
+        for ( i ; i <= contagem; i++) {
             document.write(`${i}, `)
-            i++
         }
+
         document.write("FIM!")
 
 
