--- a/2.html
+++ b/2.html
@@ -12,7 +12,7 @@
         var lucas = 1.10
         index = 0
 
-        while(lucas.toFixed(2) !== pedro.toFixed(2)) {
+        while(lucas < pedro) {
             pedro += 0.02
             lucas += 0.03
             index ++
