--- a/2.html
+++ b/2.html
@@ -20,8 +20,8 @@
             console.log(pedro.toFixed(2), lucas.toFixed(2))
             document.write(`${index}° ano. Altura de Pedro: ${pedro.toFixed(2)}m, altura de Lucas: ${lucas.toFixed(2)}m <br><br>`)
         }
-
-        document.write(`No total se passaram ${index} anos. <br><br> ESTÃO ALTOS ATÉ DEMAIS!!! É o Manute Bol???`)
+        document.write(`São necessários ${index - 1} para que Lucas e Pedro tenham a mesma altura. <br>`)
+        document.write(`São necessário ${index} anos para que Lucas seja maior que Pedro. <br><br> ESTÃO ALTOS ATÉ DEMAIS!!! É o Manute Bol???`)
     </script>
 </body>
 </html>
